--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style src="styles.css"></style>
+    <link href="styles.css" rel="stylesheet">
+    <script defer src="eventos.js"></script>
 </head>
 <body>
-    <button id="saludarBtn">Saludar</button>
-    <script>
-        document.getElementById('saludarBtn').addEventListener('click', function() {
-            alert('¡Hola!');
-        });
-    </script>
+    <div id="boton">
+        <button id="saludarBtn">Saludar</button>
+    </div> 
+   
+    
     
 </body>
 </html>
